# haskell-stuff

./: README.md
testHaskell/: cabal.sandbox.config  testHaskell.cabal
testHaskell/test/: Spec.hs
